# lr6

./: CMakeLists.txt  main.cpp  object_data
